--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://http://13.53.76.250:9000//</sonar.host.url>
+		<sonar.host.url>http://51.21.129.89:9000//</sonar.host.url>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                 <maven.compiler.source>1.7</maven.compiler.source>
                 <maven.compiler.target>1.7</maven.compiler.target>
@@ -32,12 +32,12 @@
 	<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusRepo</id>
-		    <url>http://13.51.193.177:8081/repository/sample-snapshots/</url>
+		    <url>http://51.20.69.22:8081/repository/sample-snapshots/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexusRepo</id>
-		    <url>http://13.51.193.177:8081/repository/sample-releases/</url>
+		    <url>http://51.20.69.22:8081/repository/sample-releases/</url>
 		</repository>
   	</distributionManagement>
 	
